<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, PlonkActivity</string>
    <string name="app_name">PLoNK</string>
<string name="menu_settings">Settings</string>
<string name="add_pch_ip_hint">192.168.0.1</string>
<string name="button_pch_ip_add">Set</string>
<string name="app_settings">PLoNK Settings</string>
<string name="add_pch_ip_header">Set ip number of your PCH</string>
<string name="add_llink_ip_header">Set ip:port of you llink server</string>
<string name="add_llink_ip_hint">192.168.0.2:8009</string>
<string name="button_llink_ip_add">Set</string>
<string name="settings_saved_toast">Settings Saved!</string>
<color name="toast_color">#86b600</color>
<string name="downloading_toast">Loading\u2026</string>
<string name="plonk_status_text">Status of plonk</string>
<string name="app_remote">PLoNK Remote Controller</string>
<string name="PlayButton">Play</string>
<string name="menu_remote">Remote Controll</string>
<string name="checkBoxA100">A100</string>
<string name="checkBoxC200">C200</string>
<string name="pch_default_version">a100</string>
<string name="pch_A100_version">a100</string>
<string name="pch_C200_version">c200</string>
<string name="cancel">Cancel</string>
</resources>
